Updated JavaDoc for #9